# chess-bot

./: .gitignore  CMakeLists.txt  binding.gyp  magics.ts  package-lock.json  package.json  tsconfig.json
app/: Bot.ts  Game.ts  LichessBot.ts  Utils.ts  api.cpp  api.h  bot.cpp  bot.h  game.cpp  game.h  gameUtils.cpp  gameUtils.h  index.ts  init.cpp  init.h  main.cpp  perft.cpp  perft.h  perft.ts  stockfish.html  utils.cpp  utils.h
app/types/: index.ts  lichess.ts
app/typings/: addon.d.ts
